[gd_scene load_steps=6 format=3 uid="uid://bgnf20lw8b7k0"]

[ext_resource type="PackedScene" uid="uid://bdqhx8ksm0m8u" path="res://scenes/player.tscn" id="1_k0a6g"]
[ext_resource type="Script" path="res://scripts/lighting_system.gd" id="2_lighting"]
[ext_resource type="Script" path="res://scripts/particle_manager.gd" id="3_particle"]
[ext_resource type="Script" path="res://scripts/atmospheric_integration.gd" id="4_integration"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqc3h"]
size = Vector2(400, 40)

[node name="Main" type="Node2D"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.15, 0.15, 0.2, 1)

[node name="LightingSystem" type="Node2D" parent="."]
script = ExtResource("2_lighting")
enable_player_light = true
player_light_energy = 1.2
player_light_scale = Vector2(2, 2)
enable_flickering_lights = true
flicker_intensity = 0.4
flicker_speed = 3.0
enable_fog = true
fog_layer_count = 2
fog_color = Color(0.15, 0.15, 0.2, 0.3)

[node name="ParticleManager" type="Node2D" parent="."]
script = ExtResource("3_particle")
enable_dash_trails = true
dash_trail_color = Color(0.5, 0.8, 1, 0.8)
dash_trail_amount = 5
enable_impacts = true
impact_particle_count = 20
enable_dust = true
dust_particle_count = 12

[node name="AtmosphericIntegration" type="Node" parent="."]
script = ExtResource("4_integration")
auto_dust_on_landing = true
landing_velocity_threshold = 200.0

[node name="Player" parent="." instance=ExtResource("1_k0a6g")]
position = Vector2(200, 400)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)

[node name="Platforms" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Platforms"]
position = Vector2(640, 680)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ground"]
shape = SubResource("RectangleShape2D_mqc3h")

[node name="ColorRect" type="ColorRect" parent="Platforms/Ground"]
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
color = Color(0.337255, 0.235294, 0.184314, 1)

[node name="Platform1" type="StaticBody2D" parent="Platforms"]
position = Vector2(400, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform1"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mqc3h")
scale = Vector2(0.5, 1)

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform1"]
offset_left = -100.0
offset_top = -19.0
offset_right = 100.0
offset_bottom = 21.0
color = Color(0.337255, 0.235294, 0.184314, 1)

[node name="Platform2" type="StaticBody2D" parent="Platforms"]
position = Vector2(800, 480)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform2"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mqc3h")
scale = Vector2(0.5, 1)

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform2"]
offset_left = -100.0
offset_top = -19.0
offset_right = 100.0
offset_bottom = 21.0
color = Color(0.337255, 0.235294, 0.184314, 1)

[node name="Platform3" type="StaticBody2D" parent="Platforms"]
position = Vector2(200, 480)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform3"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mqc3h")
scale = Vector2(0.4, 1)

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform3"]
offset_left = -80.0
offset_top = -19.0
offset_right = 80.0
offset_bottom = 21.0
color = Color(0.337255, 0.235294, 0.184314, 1)

[node name="HighPlatform" type="StaticBody2D" parent="Platforms"]
position = Vector2(640, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/HighPlatform"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mqc3h")
scale = Vector2(0.6, 1)

[node name="ColorRect" type="ColorRect" parent="Platforms/HighPlatform"]
offset_left = -120.0
offset_top = -19.0
offset_right = 120.0
offset_bottom = 21.0
color = Color(0.337255, 0.235294, 0.184314, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Instructions" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Atmospheric Game Demo

Controls:
- Move: A/D or Arrow Keys (Left/Right)
- Jump: Space, W, or Up Arrow

Features:
- Smooth acceleration and deceleration
- Coyote time (jump shortly after leaving edge)
- Jump buffering (press jump before landing)
- Variable jump height (hold for higher jumps)
- Player-following light with atmospheric fog
- Automatic landing dust particles
- Flickering environmental lights"
